[package]
name = "rust-redmine"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde_with = "3.8.1"

[dev-dependencies]
uuid = { version = "1.9.1", features = ["v4"] }
